@startuml domain_entities
skinparam style strictuml
skinparam linetype ortho
hide empty members

class Account {
    + accountId: String
    + name: String
    + taxId: String
    + role: Role
    + createdAt: Instant
    + updatedAt: Instant
    + points: Int
}

enum Role <<enumeration>> {
    USER
    ADMIN
    --
    {static} + fromString(value: String)
}

class ParkingArea {
    + parkingAreaId: String?
    + ownerId: String
    + name: String
    + latitude: Double
    + longitude: Double
    + capacity: Int
    + currentOccupancy: Int
    + isOperative: Boolean
    + isActive: Boolean
    + timezoneId: String
    + openingTime: String
    + closingTime: String
    + openDays: Set<DayOfWeek>
    + rules: List<String>
    + occupancyThreshold: Integer?
}
class Reservation {
    + reservationId: String?
    + accountId: String
    + parkingAreaId: String
    + inTime: Instant
    + outTime: Instant
    + state: ReservationState
    + createdAt: Instant
    + distance: Double
    --
    + canCancel(): Boolean
    + canCheckOut(): Boolean
    + canExtend(): Boolean
    + hasActions(): Boolean
}

enum ReservationState <<enumeration>> {
    RESERVED
    CHECKED_IN
    CHECKED_OUT
    CANCELLED
    EXPIRED
    OVERDUE
    --
    {static} + fromString(value: String): ReservationState
    + canTransitionTo(next: ReservationState): Boolean
}

class ReservationDetail {
    + reservation: Reservation
    + parkingName: String
    + parkingAddress: String
    + parkingLatitude: Double
    + parkingLongitude: Double
}

class Alert {
    + alertId: String
    + accountId: String
    + parkingAreaId: String?
    + parkingName: String?
    + reservationId: String?
    + type: AlertType
    + value: Double?
    + customMessage: String?
    + isRead: Boolean
    + createdAt: Instant
}

class OccupancyPrediction {
    + parkingAreaId: String
    + dateTime: Instant
    + predictedOccupancy: Int
    + confidenceScore: Double
}

enum AlertType <<enumeration>> {
    OCCUPANCY_LIMIT
    SUSPICIOUS_RESERVATION
    PARKING_NOTIFICATION
    PREDICTED_OCCUPANCY
    RECURRENT_EXPIRED
    RECURRENT_CANCELLATIONS
    RECURRENT_OVERSTAY
    SUSPICIOUS_NEW_ACCOUNT
    UNUSUAL_BOOKING_FREQUENCY
    UNUSUAL_BOOKING_HOUR
    UNUSUAL_BOOKING_WEEKDAY
    ABNORMAL_BOOKING_PATTERN
    --
    {static} + fromString(value: String): AlertType
}

class ParkingDiscovery{
    recommended: ParkingArea?
    allNearby: List<ParkingArea>
}

class Theme {
    + themeId: String
    + name: String
    + cost: Int
    + primaryColor: String
    + secondaryColor: String
    + isUnlocked: Boolean
    + isApplied: Boolean
}

class UserEcoMetrics {
    + weeklyMetrics: UserPeriodMetrics
    + monthlyMetrics: UserPeriodMetrics
    + yearlyMetrics: UserPeriodMetrics
}

class UserPeriodMetrics {
    + distance: Double
    + rankingPosition: Int
    + totalUsers: Int
}

class ChatMessage {
    + id: String
    + text: String
    + sender: MessageSender
    + createdAt: Instant
}

enum MessageSender <<enumeration>> {
    USER
    ASSISTANT
    --
    {static} + fromString(value: String): MessageSender
}

ChatMessage "1" --> "1" MessageSender
Account "1" --> "1" Role
Reservation "1" --> "1" ReservationState
ReservationDetail "1" o-- "1" Reservation
Alert "1" --> "1" AlertType
@enduml